k8s/apps/finances/actualbudget/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actualbudget
spec:
  hostnames:
    - budget.example.com
  parentRefs:
    - kind: Gateway
      name: internal
      namespace: gateway-api
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: actualbudget
          group: ""
          port: 5006
          weight: 1
